<resources>
    <string name="app_name">My Hungry Cat</string>
    <string name="credits">Credits</string>
    <string name="programming">Programming:</string>
    <string name="boris_elkin">Boris Elkin</string>
    <string name="_2_open_sources">2% open sources</string>
    <string name="art">Art:</string>
    <string name="music">Music</string>
    <string name="in_menu">In menu:</string>
    <string name="composer_benjamin_tissot_this_composition_was_found_on_www_bensound_com">Composer: Benjamin TISSOT. This composition was found on \'\'www.bensound.com\'\'</string>
    <string name="in_game">In game:</string>
    <string name="was_found_on_www_purple_planet_com">Was found on \'\'www.purple-planet.com\'\'</string>
    <string name="special_thanks_to_freesound_org_for_all_sound_effects">Special thanks to \'\'Freesound.org\'\' for all sound effects</string>
    <string name="you_can_contact_me_ea_foreverrr_gmail_com">You can contact me: ea.foreverrr@gmail.com</string>
    <string name="feel_free_to_share_your_thoughts_about_this_app">Feel free to share your thoughts about this app</string>
    <string name="random_sound">Random sound</string>
    <string name="history_of_creation">History of creation</string>
    <string name="achievements">Achievements</string>
    <string name="choose_level">Choose level</string>
    <string name="new_game">new game</string>
    <string name="history_page">History page</string>
    <string name="this_game_was_created_as_a_part_of_my_educational_process">This game was created as a part of my educational process.</string>
    <string name="in_the_beginning_it_had_only_2_levels_level_one_looked_almost_as_same_as_it_is_now_the_only_difference_is_in_background">In the beginning it had only 2 levels, level one looked almost as same as it is now, the only difference is in background.</string>
    <string name="now_second_level_is_show_as_a_first_bonus_level">Now second level is show as a first bonus level.</string>
    <string name="when_you_receive_3_or_more_achievements_you_can_play_bonus_level">When you receive 3 or more achievements you can play bonus level.</string>
    <string name="note_this_level_is_too_raw_and_uncompleted_it_was_added_to_the_game_just_to_show_you_what_kind_of_game_it_was_at_the_beginning">Note: this level is too raw and uncompleted. It was added to the game just to show you what kind of game it was at the beginning.</string>
    <string name="achievements_received">Achievements received:</string>
    <string name="play_bonus_level">PLAY BONUS LEVEL</string>
    <string name="images_schemes_etc">Images, schemes etc.</string>
    <string name="scheme_pack_1_belongs_to_levels_2_4">Scheme pack 1. Belongs to levels 2-4.</string>
    <string name="scheme_pack_2_belongs_to_levels_5_6">Scheme pack 2. Belongs to levels 5-6.</string>
    <string name="little_scheme_of_interactions_in_level_6">Little scheme of interactions in level 6</string>
    <string name="me_at_the_development_process">Me at the development process</string>
    <string name="if_you_have_any_thoughts_about_this_application_just_let_me_know_via_comments_in_googleplay_or_via_my_contact_information_in_credits_page">If you have any thoughts about this application, just let me know via comments in GooglePlay or via my contact information in \'\'Credits page\'\'.</string>
    <string name="okay">Okay</string>
    <string name="unknown">unknown???</string>
    <string name="wolf_in_sheep_s_clothing">Wolf in sheep\'s clothing</string>
    <string name="mass_killer">Mass killer</string>
    <string name="playing_with_death">Playing with death</string>
    <string name="pass_all_casual_levels">Pass all casual levels</string>
    <string name="definitive_victory">Definitive victory</string>
    <string name="level_is_locked">- Level is locked.</string>
    <string name="level_is_in_development">- Level is in development.</string>
    <string name="close">Close</string>
    <string name="squirrel">Squirrel</string>
    <string name="i_have_only_one_carrot_left_for_sale">I have only one carrot left for sale</string>
    <string name="buy">buy</string>
    <string name="close_shop">Close shop</string>
    <string name="mole_s_shop">Mole\'s shop</string>
    <string name="here_you_can_choose_items_you_want_to_buy_each_item_can_be_bought_only_once">Here you can choose items you want to buy. Each item can be bought only once.</string>
    <string name="your_money">Your money:</string>
    <string name="owl_little_shop">Owl little shop</string>
    <string name="here_you_can_choose_items_you_want_to_buy_each_item_can_be_bought_only_certain_amount_of_times">Here you can choose items you want to buy. Each item can be bought only certain amount of times.</string>
    <string name="fox_little_shop">Fox little shop</string>
    <string name="cat_satisfaction">Cat satisfaction</string>
    <string name="coin_count">Coin count:</string>
    <string name="boom">Boom</string>
    <string name="restart_level">RESTART LEVEL</string>
    <string name="to_main_menu">TO MAIN MENU</string>
    <string name="so_big_explosion_happened_the_cat_is_dead_i_just_wonder_why_did_you_do_that_blowing_up_dynamite_in_small_distance_to_the_cat_would_cause_death_in_any_scenario">So, big explosion happened. The cat is dead. I just wonder, why did you do that? Blowing up dynamite in small distance to the cat would cause death in any scenario.</string>
    <string name="rabbit_interaction">Rabbit interaction</string>
    <string name="choose_action_with_carrot">Choose action with carrot</string>
    <string name="gift_it">gift it</string>
    <string name="he_will_take_it_as_a_gift_and_will_eat_it">He will take it as a gift and will eat it.</string>
    <string name="he_will_take_it_and_will_give_you_money">He will take it and will give you money</string>
    <string name="sell_it">sell it</string>
    <string name="cancel_interaction">cancel interaction</string>
    <string name="achievements_count">Achievements count:</string>
    <string name="sounds">Sounds</string>
    <string name="font">Font</string>
    <string name="it_is_level_one">It\'s level one!</string>
    <string name="i_think_you_don_t_need_help">This level is so simple. I think you don\'t need any help.</string>
    <string name="play_game">Play game</string>
    <string name="cat">Cat</string>
    <string name="q">I\'m hungry</string>
    <string name="w">Okay</string>
    <string name="e">Stop touching me! You better feed me!</string>
    <string name="r">Yeah</string>
    <string name="t">You\'re so silly...</string>
    <string name="y">So you think you better!? Stupid imageView with id \'\'cat\'\'</string>
    <string name="u">from this moment, I won\'t react to your clicks...</string>
    <string name="i">So nice</string>
    <string name="o">Nope, I don\'t want that.</string>
    <string name="p">I\'ll find a way to do that anyway</string>
    <string name="a">Back to menu</string>
    <string name="s">Like a Boss!</string>
    <string name="d">You have fed the cat and passed level one. Hooray!</string>
    <string name="f">To level two</string>
    <string name="g">The cat is dead</string>
    <string name="h">Probably you have to repeat from the beginning</string>
    <string name="j">stat over</string>
    <string name="k">Achievement received</string>
    <string name="l">Cancel</string>
    <string name="z">Go to menu</string>
    <string name="x">Go to main menu?</string>
    <string name="c">Progress of current level will be lost.</string>
    <string name="v">It\'s level two!</string>
    <string name="b">This level is a bit harder.New feature: now you have a progress bar with food cat consumed. One piece of food is hidden, but even 6-year old child can solve this riddle</string>
    <string name="n">Play game</string>
    <string name="m">This level is a bit harder.New feature: now you have a progress bar with food cat consumed. One piece of food is hidden, but even 6-year old child can solve this riddle</string>
    <string name="qw">What a beautiful paint on the wall, I like it!</string>
    <string name="qe">Yeah, looks good</string>
    <string name="qr">Do you have any questions?</string>
    <string name="qt">I guess, no</string>
    <string name="qy">Stop clicking me, please!</string>
    <string name="qu">I just can\'t stop</string>
    <string name="qi">Okay, if you want to pass this level, you need to put your finger on trash container and wait a while</string>
    <string name="qo">Okay</string>
    <string name="qp">Please, I feel headache because of your clicks, stop it!</string>
    <string name="qa">My answer is rather no than yes</string>
    <string name="qs">Stop clicking me, you wondering nerd</string>
    <string name="qd">That is really offensive!</string>
    <string name="qf">Ouch, why did you hit me? That\'s painful!</string>
    <string name="qg">Next time you think before you insult me</string>
    <string name="qz">Use it to draw something on the wall</string>
    <string name="qx">Okay</string>
    <string name="qc">Items such as this mostly have no functionality, they\'re just here to fill the game, but, in some cases they have their unique role.</string>
    <string name="qv">Okay</string>
    <string name="qb">I don\'t like bones.</string>
    <string name="qn">Okay</string>
    <string name="qk">Back to menu</string>
    <string name="qsa">Like a Boss!</string>
    <string name="qwe">You have fed the cat and passed level two. Hooray!</string>
    <string name="qrr">To level three</string>
    <string name="hg">The cat is dead</string>
    <string name="gf">Probably you have to repeat from the beginning</string>
    <string name="nnb">stat over</string>
    <string name="nb">Cancel</string>
    <string name="afer">Go to menu</string>
    <string name="erg">Go to main menu?</string>
    <string name="thregrfw">Progress of current level will be lost.</string>
    <string name="bcd">Achievement received</string>
    <string name="sesf">It\'s level three!</string>
    <string name="aegrg">This level is a bit harder. Try to search for some hidden food. There are 4 hidden spots for food.</string>
    <string name="xdv">Play game</string>
    <string name="jthyrtge">It\'s level three!</string>
    <string name="jhgre">This level is a bit harder. Try to search for some hidden food. There are 4 hidden spots for food.</string>
    <string name="nbvcf">Play game</string>
    <string name="tjhrtg">I\'m hungry!!!</string>
    <string name="nbvc">As always...</string>
    <string name="iuytr">If be honest, I\'m tired of you clicking me, stop doing that!</string>
    <string name="nbvcd">Maybe, next time</string>
    <string name="uytrfwvebeg">If you still don\'t know, you can search for some food in those refuse bins.</string>
    <string name="rrrrgfrwef">I thought of that too</string>
    <string name="gdde">Cancel</string>
    <string name="erfw">Go to menu</string>
    <string name="rtgerf">Go to main menu?</string>
    <string name="gfrwed">Progress of current level will be lost.</string>
    <string name="gferwde">Too high</string>
    <string name="ddeferfe">Wow, it\'s a very rare dirty clock, if you find mole, you can exchange it for something precious!</string>
    <string name="gfdwed">but there\'s no creatures around in this dump</string>
    <string name="dfsdadv">Why do you poke my face? with different rubbish?</string>
    <string name="awdesfxv">Just having fun</string>
    <string name="awfesbdfgf">What? How did you lift this thing up? Okay, it doesn\'t matter, just keep it away from me.</string>
    <string name="qwd">Okay</string>
    <string name="grf">I\'ve already told you what I think about it.</string>
    <string name="bewv">Yeah, I\'m just messing around, it\'s fine</string>
    <string name="dbdfv">I don\'t like bones.</string>
    <string name="aewa">Okay</string>
    <string name="fgnfgb">Take this dirty empty can away from me!</string>
</resources>