<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/Orange1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        app:cardPreventCornerOverlap="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/rabbit_interaction"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/comicrelief"
                    android:textColor="@color/InfoColor"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/choose_action_with_carrot"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/comicrelief"
                    android:textColor="@color/InfoColor"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        >

                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="6dp"
                            android:background="@drawable/btn_yellow_style"
                            android:padding="5dp"
                            android:text="@string/gift_it"
                            android:fontFamily="@font/comicrelief"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/he_will_take_it_as_a_gift_and_will_eat_it"
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:fontFamily="@font/comicrelief"
                            android:textColor="@color/InfoColor"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_margin="8dp">
                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/comicrelief"
                            android:textColor="@android:color/black"
                            android:background="@drawable/btn_yellow_style"
                            android:padding="5dp"
                            android:text="@string/sell_it"
                            android:layout_marginBottom="6dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/textView62"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/he_will_take_it_and_will_give_you_money"
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:fontFamily="@font/comicrelief"
                            android:textColor="@color/InfoColor"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/close_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="75dp"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:background="@drawable/btn_yellow_style"
                    android:paddingEnd="25dp"
                    android:paddingStart="25dp"
                    android:text="@string/cancel_interaction"
                    android:fontFamily="@font/comicrelief"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>