<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_gravity="center">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/pinkNotif"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cardView"
        app:cardPreventCornerOverlap="false"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/blood"
                    android:scaleType="fitXY"/>


            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.647">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/comicrelief"
                        android:text="@string/boom"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/comicrelief"
                        android:text="@string/so_big_explosion_happened_the_cat_is_dead_i_just_wonder_why_did_you_do_that_blowing_up_dynamite_in_small_distance_to_the_cat_would_cause_death_in_any_scenario"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"


                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="40dp">

                        <Button
                            android:id="@+id/btnBack"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="7dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_weight="1"
                            android:background="@drawable/pink_button"
                            android:elevation="3dp"
                            android:fontFamily="@font/comicrelief"
                            android:text="@string/to_main_menu"
                            android:textSize="13dp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnOk"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="7dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="3dp"
                            android:layout_weight="1"
                            android:background="@drawable/pink_button"
                            android:elevation="3dp"
                            android:fontFamily="@font/comicrelief"
                            android:text="@string/restart_level"
                            android:textSize="13dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>